# Aerospace-AI-Certification-Intelligence-Platform-

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.module.css  page.tsx
data/public/: README.md
data/public/changes/: firmware-change-request.md
data/public/graph/: dap-100-graph.json
data/public/regulatory/: obligations-summary.md
data/public/requirements/: software-requirements.md
data/public/safety/: hazard-assessment.md
data/public/traceability/: trace-matrix.md
data/public/verification/: test-results.md
docs/: AeroCert-User-Quick-Guide.docx  TESTING.md  roadmap.md
docs/architecture/: ai-layer.md  ingestion.md  knowledge-graph.md  overview.md  regulatory.md  security.md
infrastructure/: docker-compose.yml
scripts/: create_user_guide_docx.py  verify_demo.ps1
services/gateway/: pyproject.toml
services/gateway/src/gateway/: __init__.py  config.py  demo.py  main.py
services/graph/: pyproject.toml
services/graph/src/graph_engine/: __init__.py  client.py  impact.py  memory_store.py  schema.py
services/graph/src/graph_engine/queries/: impact.cypher
services/ingestion/: README.md  pyproject.toml
services/ingestion/src/ingestion/: __init__.py  pipeline.py
services/ingestion/src/ingestion/connectors/: __init__.py  base.py  file_upload.py
services/ingestion/src/ingestion/parsers/: document.py
services/intelligence/: README.md  pyproject.toml
services/intelligence/src/intelligence/: __init__.py
services/intelligence/src/intelligence/agents/: base.py  impact.py
services/intelligence/src/intelligence/rag/: grounded_answer.py  local_retriever.py  pipeline.py
services/intelligence/src/intelligence/validators/: __init__.py  trace.py
services/intelligence/tests/: test_local_retriever.py
services/regulatory/: pyproject.toml
services/regulatory/src/regulatory/: ontology.py
