[project]
name = "aerospace-cert-intelligence-platform"
version = "0.1.0"
description = "Aerospace AI Certification Intelligence Platform — monorepo root"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["packages/domain/tests", "services/intelligence/tests"]
pythonpath = [
  "packages/domain/src",
  "services/intelligence/src",
]
