[project]
name = "aero-cert-gateway"
version = "0.1.0"
description = "API gateway for Aerospace Certification Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "aero-cert-domain",
    "aero-cert-graph",
    "aero-cert-intelligence",
    "aero-cert-ingestion",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
