[project]
name = "aero-cert-ingestion"
version = "0.1.0"
description = "Centralized data ingestion and normalization for certification evidence"
requires-python = ">=3.11"
dependencies = [
    "aero-cert-domain",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
