[project]
name = "aero-cert-intelligence"
version = "0.1.0"
description = "RAG, agents, and deterministic validators for certification intelligence"
requires-python = ">=3.11"
dependencies = [
    "aero-cert-domain",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelligence"]
