[project]
name = "aero-cert-regulatory"
version = "0.1.0"
description = "Regulatory standards ontology and obligation mapping"
requires-python = ">=3.11"
dependencies = ["aero-cert-domain", "pydantic>=2.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regulatory"]
